--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@gsap/react": "^2.1.2",
     "framer-motion": "^11.11.11",
+    "lenis": "^1.1.20",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
